// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homepage latest news component should match snapshot with a featured story 1`] = `
<div>
  <section
    class="latestNews"
  >
    <h2
      class="title"
    >
      Latest from NICE
    </h2>
    <article
      class="story"
    >
      <div
        class="imageContainer"
        style="background-image: url(https://placebacon.net/300/210?image=1/m/868x0/filters:quality%2880%29);"
      />
      <div
        class="content"
      >
        <h3
          class="heading"
        >
          <a
            href="/i/am/a-very-full-slug"
          >
            Featured story title
          </a>
        </h3>
        <p>
          Featured story intro text
        </p>
        <footer>
          <span
            class="tag tag--outline"
            data-component="tag"
          >
            News
          </span>
          <span
            class="date"
          >
            31 January 2024
          </span>
        </footer>
      </div>
    </article>
    <ol
      class="newsGrid"
    >
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(https://placekitten.com/200/286/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test news article title
              </a>
            </h3>
            <p>
              Test intro text
            </p>
            <footer>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  News
                </span>
                <span
                  class="date"
                >
                  31 January 2024
                </span>
              </div>
            </footer>
          </div>
        </article>
      </li>
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(https://placekitten.com/200/139/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test blog post title
              </a>
            </h3>
            <p>
              Let's play Blockbusters!
            </p>
            <footer>
              <div
                class="author"
              >
                <p
                  class="author"
                >
                  by 
                  Bob Holness
                  , 
                  Blockbusters host
                </p>
              </div>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  Blog
                </span>
                <span
                  class="date"
                >
                  20 February 2024
                </span>
              </div>
            </footer>
          </div>
        </article>
      </li>
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(https://placekitten.com/200/286/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test news article title
              </a>
            </h3>
            <p>
              Test intro text
            </p>
            <footer>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  News
                </span>
                <span
                  class="date"
                >
                  31 January 2024
                </span>
              </div>
            </footer>
          </div>
        </article>
      </li>
    </ol>
  </section>
</div>
`;

exports[`Homepage latest news component should match snapshot without a featured story 1`] = `
<div>
  <section
    class="latestNews"
  >
    <h2
      class="title"
    >
      Latest from NICE
    </h2>
    <ol
      class="newsGrid"
    >
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(https://placekitten.com/200/286/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test news article title
              </a>
            </h3>
            <p>
              Test intro text
            </p>
            <footer>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  News
                </span>
                <span
                  class="date"
                >
                  31 January 2024
                </span>
              </div>
            </footer>
          </div>
        </article>
      </li>
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(https://placekitten.com/200/139/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test blog post title
              </a>
            </h3>
            <p>
              Let's play Blockbusters!
            </p>
            <footer>
              <div
                class="author"
              >
                <p
                  class="author"
                >
                  by 
                  Bob Holness
                  , 
                  Blockbusters host
                </p>
              </div>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  Blog
                </span>
                <span
                  class="date"
                >
                  20 February 2024
                </span>
              </div>
            </footer>
          </div>
        </article>
      </li>
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(https://placekitten.com/200/286/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test news article title
              </a>
            </h3>
            <p>
              Test intro text
            </p>
            <footer>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  News
                </span>
                <span
                  class="date"
                >
                  31 January 2024
                </span>
              </div>
            </footer>
          </div>
        </article>
      </li>
    </ol>
  </section>
</div>
`;
